# xmail

./: .env.prod.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml
backend/: .env.example  .env.test  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: graph.py  runner.py  state.py
backend/app/agents/nodes/: apollo_lookup.py  crawl_urls.py  dedupe_against_db.py  enrich_contact.py  extract_emails.py  finalize.py  hunter_lookup.py  infer_email_pattern.py  pdl_enrich.py  persist_contact.py  planner.py  proxycurl_enrich.py  rss_feed_reader.py  score_contact.py  search_web.py  validate_email.py
backend/app/agents/prompts/: draft_email_v1.md  enricher_v1.md  extractor_v1.md  loader.py  planner_v1.md  quality_judge_v1.md  reply_classifier_v1.md  subject_line_v1.md
backend/app/api/: deps.py
backend/app/api/routes/: audience_types.py  audit_logs.py  (+13 more)
backend/app/core/: auth.py  crypto.py  exceptions.py  logger.py  metrics.py  middleware.py  security.py  spam_checker.py  webhook_signatures.py
backend/app/deduplication/: bloom_filter.py  checker.py  db_checker.py  hasher.py
backend/app/email_validator/: dea_check.py  mx_check.py  role_check.py  smtp_check.py  syntax.py  validator.py  zerobounce_client.py
backend/app/llm/: base.py  router.py
backend/app/models/: __init__.py  agent_memory.py  agent_run.py  audit_log.py  bot_config.py  bot_state.py  campaign.py  campaign_sequence.py  campaign_sequence_step.py  daily_report.py  discovered_contact.py  llm_config.py  scraping_source.py  sent_email.py  smtp_config.py  suggestion_history.py  suppression_list.py  target_audience_type.py  user.py
backend/app/reports/: pdf_generator.py  storage.py  xml_exporter.py
backend/app/schemas/: campaign.py  contact.py  llm.py  report.py  smtp.py  suppression.py  user.py
backend/app/scrapers/: anti_ban.py  apollo_client.py  audience_keywords.json  email_extractor.py  firecrawl_client.py  hunter_client.py  pdl_client.py  playwright_scraper.py  proxycurl_client.py  robots_checker.py
backend/app/sender/: compliance.py  smtp_client.py
backend/app/tasks/: __init__.py  beat_schedule.py  bloom_filter_snapshot.py  bounce_processing.py  bulk_verify_task.py  campaign_runner.py  celery_app.py  daily_discovery_run.py  daily_report_delivery.py  daily_report_generation.py  dea_list_update.py  domain_bulk_targeting.py  finance_source_seeder.py  imap_reply_checker.py  rss_scraping_task.py  scraping_task.py  sequence_runner.py  stale_verification_cleanup.py  suppression_sync.py  webhook_processor.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_add_totp_and_security_columns.py  0002_add_campaign_sequences.py  0003_add_ab_variant_to_sent_emails.py  0004_add_webhook_tracking_fields.py  0005_add_replied_at_to_sent_emails.py  0006_add_hourly_limit_to_campaigns.py
backend/scripts/: seed_audience_types.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_auth_api.py  test_health.py  test_tracking_unsubscribe.py  test_webhooks_api.py
backend/tests/core/: test_auth.py  test_rbac.py  test_security.py  test_webhook_signatures.py
backend/tests/sender/: test_compliance.py
backend/tests/tasks/: test_campaign_runner.py  test_daily_report.py
(+51 files in other folders)
